# SmartHome

./: .gitignore  LICENCE  LICENSE  README.md
smart_home_backend/: main.py  pyproject.toml
smart_home_backend/smhob/: smhob.py
smart_home_ui/: pubspec.yaml
smart_home_ui/android/app/: build.gradle.kts
smart_home_ui/linux/runner/: my_application.cc
smart_home_ui/macos/Runner/Configs/: AppInfo.xcconfig
smart_home_ui/windows/runner/: Runner.rc
