[project]
name = "smart-home-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.129.0",
    "paho-mqtt>=2.1.0",
    "redis>=7.1.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
